fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -348,7 +348,7 @@ body {
 }
 
 .travel-image, .food-image, .cat-image {
-	width: 6em;
+	width: 4em;
 	height: auto;
 	padding: 0;
 	margin: 0;
@@ -360,13 +360,25 @@ body {
 .travel-image1, .travel-image2, .travel-image3, .travel-image4, .travel-image5, .travel-image6,
 .food-image1, .food-image2, .food-image3, .food-image4, .food-image5, .food-image6,
 .cat-image1, .cat-image2, .cat-image3, .cat-image4, .cat-image5, .cat-image6 {
-	width: 6em;
+	width: 4em;
 	height: auto;
 	padding: 0;
 	margin: 0;
 	line-height: 0;
 	cursor: pointer;
 	transition: transform 0.6s ease-in-out;
+}
+
+@media (min-width: 400px) {
+	.travel-image, .food-image, .cat-image {
+		width: 6em;
+	}
+
+	.travel-image1, .travel-image2, .travel-image3, .travel-image4, .travel-image5, .travel-image6,
+	.food-image1, .food-image2, .food-image3, .food-image4, .food-image5, .food-image6,
+	.cat-image1, .cat-image2, .cat-image3, .cat-image4, .cat-image5, .cat-image6 {
+		width: 6em;
+	}
 }
 
 @media (min-width: 800px) {
